test/semantic_errors/invalid_declaration3.mc
void main() {
    int a[10];
    bool b = a[1]; /* assignment of int to a bool */
}